# astrant-extensions

./: .gitignore  CMakeLists.txt  README.md  add.hpp  algorithm.hpp  algorithm_extensions.hpp  append.hpp  clamp.hpp  container_find.hpp  contains.hpp  demangle.hpp  denormalize.hpp  detect_os.hpp  extensions.hpp  flatten.hpp  from_string.hpp  geordi.hpp  index_container.hpp  iterator_pair.hpp  make_unique.hpp  matches.hpp  max.hpp  merge_inplace.hpp  normalize.hpp  prepend.hpp  product.hpp  random_element.hpp  random_value.hpp  range.hpp  rcrr.hpp  recursive_merge_inplace.hpp  remove_element.hpp  smootherstep.hpp  sorted_insert.hpp  stream.hpp  stream_insertion.hpp  stream_insertion_extensions.hpp  syntax-check.sh  tlists.hpp  to_string.hpp  (+2 more)
tests/: CMakeLists.txt  check.cpp  map_merge.cpp
